@@ -1,3 +1,9 @@
+2005-06-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (add_symbol_adjust): Set sym visibility to most
+	restrictive of func code and func descr for undefined syms as well
+	as defined.
+
 2005-05-29  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	Backport from mainline:
